--- a/.github/workflows/snk.yml
+++ b/.github/workflows/snk.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: generate contribution animation
 
 # Controls when the workflow will run
 on:
@@ -13,32 +13,19 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  generate:
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: Platane/snk@v3
-      with:
-        # github user name to read the contribution graph from (**required**)
-        # using action context var `github.repository_owner` or specified user
-        github_user_name: ${{ github.repository_owner }}
+    timeout-minutes: 5
     
-        # list of files to generate.
-        # one file per line. Each output can be customized with options as query string.
-        #
-        #  supported options:
-        #  - palette:     A preset of color, one of [github, github-dark, github-light]
-        #  - color_snake: Color of the snake
-        #  - color_dots:  Coma separated list of dots color.
-        #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
-        #                 Exactly 5 colors are expected.
-        outputs: |
-          dist/github-snake.svg
-          dist/github-snake-dark.svg?palette=github-dark
-          dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+    steps:
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
